# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: check.yml
page_analyzer/: __init__.py  app.py  consts.py  database.py  sql.py  utils.py
page_analyzer/templates/: detail.html  index.html  url_detail.html  url_list.html  urls.html
page_analyzer/templates/includes/: alert.html  footer.html  header.html
page_analyzer/templates/layouts/: base.html  footer.html  header.html
tests/: test_flask.py
