[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis Snegirev <snegirev.dv@gmail.com>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
coverage = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
